rtg_tests/negative/assignment_type/go.mod
module example.com/rtgtests/negative/assignment

go 1.25
